# gst-plugins-elphel

./: HowTo.md  HowToInstall.md  ProjectHome.md  WhyJP4.md  howto.txt
bayer2rgb2/: Makefile.in  aclocal.m4  config.h.in  configure  configure.ac
bayer2rgb2/autom4te.cache/: output.0  output.1  output.2  traces.0  traces.1  traces.2
bayer2rgb2/m4/: Makefile.am  Makefile.in
bayer2rgb2/src/: Makefile.in  bayer.c  gstbayer2rgb2.c  gstbayer2rgb2.h  libdc1394_edgesence.patch
bayer2rgb2/test/: fruits.tiff
jp462bayer/autom4te.cache/: output.0  traces.0
jp462bayer/src/: Makefile.am  Makefile.in  gstjp462bayer.c  gstjp462bayer.h
tests/: get_status.py  test_elphel_bug.py  test_elphel_display.py  test_elphel_display_jp4.py  test_elphel_jp4_nomanager.py  test_elphel_perf.py  test_opencv.py
trunk/bayer2rgb2/: Makefile.in  aclocal.m4  config.h.in  configure  configure.ac  cpplugin
trunk/bayer2rgb2/autom4te.cache/: output.1  output.2  requests  traces.0
trunk/bayer2rgb2/m4/: Makefile.in
trunk/bayer2rgb2/src/: Makefile.am  Makefile.in  bayer.c  bayer.h  gstbayer2rgb2.c  gstbayer2rgb2.h
trunk/bayer2rgb2/test/: README  fruits.jp4
trunk/jp462bayer/: configure  cpplugin
trunk/jp462bayer/autom4te.cache/: output.1  traces.1
trunk/jp462bayer/src/: Makefile.am  Makefile.in  gstjp462bayer.c  gstjp462bayer.h
trunk/tests/: test_elphel_bug.py  test_elphel_display.py  test_elphel_jp4_nomanager.py  test_elphel_perf.py  test_elphel_sbin.py
wiki/: HowTo.wiki  HowToInstall.wiki  WhyJP4.wiki
